force-app/main/default/objects/NotificationControl__c/NotificationControl__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Control to turn on/off email notifications for object changes.
Note: Use Object API name for new instance. Ex:Case, Account, Custom__c. Ensure there are no duplicate instances with same Object API name. Ex: Case, Case</description>
    <label>NotificationControl</label>
</CustomObject>