force-app/main/default/objects/NotificationControl__c/fields/AdditionalToAddress__c.field-meta.xml
<CustomField>
    <fullName>AdditionalToAddress__c</fullName>
    <description>Comma separated email addresses. Ex: a@b.com,x@y.com</description>
    <inlineHelpText>Comma separated email addresses. Ex: a@b.com,x@y.com</inlineHelpText>
    <label>AdditionalToAddress</label>
    <length>255</length>
    <type>Text</type>
</CustomField>