force-app/main/default/objects/NotificationControl__c/fields/CcAddressFields__c.field-meta.xml
<CustomField>
    <fullName>CcAddressFields__c</fullName>
    <description>Comma separated list of field API name that holds email addresses. 
Ex: ContactEmail,SuppliedEmail,TeamEmail__c</description>
    <inlineHelpText>Comma separated list of field API name that holds email addresses. 
Ex: ContactEmail,SuppliedEmail,TeamEmail__c</inlineHelpText>
    <label>CcAddressFields</label>
    <length>255</length>
    <type>Text</type>
</CustomField>