force-app/main/default/objects/NotificationControl__c/fields/Enable__c.field-meta.xml
<CustomField>
    <fullName>Enable__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Enable/Disable notification</description>
    <inlineHelpText>Check to enable notifications</inlineHelpText>
    <label>Enable</label>
    <type>Checkbox</type>
</CustomField>