force-app/main/default/objects/NotificationControl__c/fields/NotifyOnFields__c.field-meta.xml
<CustomField>
    <fullName>NotifyOnFields__c</fullName>
    <description>Comma separated list of field API name to be inspected for changes. Include only important fields in this list
Ex: Owner,Comments,Priority,Status</description>
    <inlineHelpText>Comma separated list of field API name to be inspected for changes. Include only important fields in this list
Ex: Owner,Comments,Priority,Status</inlineHelpText>
    <label>NotifyOnFields</label>
    <length>255</length>
    <type>Text</type>
</CustomField>